// Vitest Snapshot v1

exports[`Component: FavoriteIcon > ui > favorite 1`] = `
<div>
  <i
    class="icon material-icons text-primary clickable"
  >
    star
  </i>
</div>
`;

exports[`Component: FavoriteIcon > ui > not favorite 1`] = `
<div>
  <i
    class="icon material-icons text-secondary clickable"
  >
    star_border
  </i>
</div>
`;
